# python_package_tutorial

./: LICENSE  pyproject.toml
src/palindrome_Lucif3r24/: phrase.py
src/palindrome_YOUR_USERNAME_HERE/: phrase.py
tests/: test_phrase.py
