[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_Lucif3r24"
version = "0.0.1"
authors = [
  { name="Lucif3r24", email="adresse.sec24@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Lucif3r24/python_package_tutorial"
"Bug Tracker" = "https://github.com/Lucif3r24/python_package_tutorial/issues"